# tpm2-jwk-storage

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml  create_vp.rs
examples/benchmarks/: diddoc.rs  keygen.rs  send_vp.rs  vc_issuance_1rtt.rs  vc_issuance_2rtt.rs
examples/src/: foo.rs
examples/utils/: dtos.rs  utils.rs
tpm2_jwk_storage/: Cargo.toml
tpm2_jwk_storage/src/: lib.rs  tpm_vault.rs
tpm2_jwk_storage/src/tests/: connection.rs  mod.rs
tpm2_jwk_storage/src/types/: mod.rs  output.rs  tpm_key_id.rs  tpm_key_type.rs
tpm2_jwk_storage/src/vault/: error.rs  jwk_storage.rs  mod.rs  tpm_vault.rs  tpm_vault_config.rs  utils.rs
